<resources>
    <string name="app_name">Chat@UniTbv</string>
    <string name="title_chats">Chats</string>
    <string name="title_people">People</string>
    <string name="title_notifications">Notifications</string>
    <string name="go_to_navigation">go to navigation</string>

    <string name="log_in">LOG IN</string>
    <string name="register">REGISTER</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm password</string>
    <string name="title_activity_main2">MainActivity</string>

    <string name="user_image">User Image</string>
    <string name="name">John Johnson</string>
    <string name="group">Group</string>
    <string name="field_of_study">Field of study</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="log_out">LOG OUT</string>
    <string name="remember_me">Remember me</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="login_fragment_label">Login Fragment</string>
    <string name="start_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="unitbv_logo">UNITBV logo</string>
    <string name="login">Login</string>
    <string name="reset">Reset password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="exit">Exit</string>
    <string name="toolbar_title">Toolbar Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="example_time_string">10:15 AM</string>
    <string name="long_body">Long Body</string>
    <string name="sender">Sender</string>
    <string name="send">Send</string>
    <string name="new_message">New message</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
</resources>