<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/received_message_full"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true">

    <TextView
        android:id="@+id/received_message_sender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="2dp"
        android:text="@string/sender"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/received_card_view_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="2dp"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/received_message_sender">

        <TextView
            android:id="@+id/received_message_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="2dp"
            android:autoLink="all"
            android:maxWidth="250dp"
            android:paddingVertical="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/long_body"
            android:textColor="@color/black"
            android:textColorLink="@color/black"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/received_message_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/example_time_string"
        android:textAlignment="viewEnd"
        android:textColor="@color/gray"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/received_card_view_message"
        app:layout_constraintLeft_toRightOf="@id/received_card_view_message"
        app:layout_constraintTop_toTopOf="@id/received_card_view_message" />
</androidx.constraintlayout.widget.ConstraintLayout>